--- a/ARCGIS PROJECT.ipynb
+++ b/ARCGIS PROJECT.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas    #AŞKIIIIIMMMMM   as gpd yaparsan gpd.read demelisin!\n"
+    "import geopandas    
    ]
   },
   {
